--- a/catalog/view/theme/default/template/account/register.twig
+++ b/catalog/view/theme/default/template/account/register.twig
@@ -341,6 +341,9 @@ $( document ).ready(function() {
 });
 $('.get_otp').click(()=>{
       var mobile_no=$('.mobile_number').val();
+      
+      if(mobile_no && mobile_no.length ===10){
+      
       $.ajax({
           type: "POST",
           url: "index.php?route=account/login/otp_check_registeration",
@@ -415,6 +418,18 @@ $('.get_otp').click(()=>{
             }
           }
       });
+      }
+      else{
+          Swal.fire({
+                title: 'Invalid Number',
+                text: "Please enter number and  valid number",
+                icon: 'error',
+                // showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                // confirmButtonText: 'Yes, delete it!'
+            });
+      }
 
 });
 
