--- a/catalog/view/theme/default/template/checkout/register.twig
+++ b/catalog/view/theme/default/template/checkout/register.twig
@@ -33,8 +33,11 @@
       </div>
       <div class="form-group required">
         <label class="control-label" for="input-payment-telephone">{{ entry_telephone }}</label>
-        <input type="text" name="telephone" value="" placeholder="{{ entry_telephone }}" id="input-payment-telephone" class="form-control" />
+        <input type="text" name="telephone" value="" placeholder="{{ entry_telephone }}" id="input-payment-telephone" class="form-control mobile_number" />
       </div>
+      <div class="form-group">
+              <input type="button" class="btn btn-primary get_otp" value="Get Otp" /> 
+          </div>
       {% for custom_field in custom_fields %}
       
       {% if custom_field.location == 'account' %}
@@ -353,7 +356,7 @@
   <div class="pull-right">{{ text_agree }} 
     &nbsp;
     <input type="checkbox" name="agree" value="1" />
-    <input type="button" value="{{ button_continue }}" id="button-register" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
+    <input type="button" value="{{ button_continue }}" id="button-register" data-loading-text="{{ text_loading }}" class="btn btn-primary btn_submit_continue" />
   </div>
 </div>
 {% else %}
@@ -363,7 +366,130 @@
   </div>
 </div>
 {% endif %} 
+<div class="modal fade" id="modalLoginOtp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="form-group">
+                    <label class="control-label" for="input-password">Otp</label>
+                    <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" />
+                </div>
+                <div class="form-group">
+                    <input type="button" class="btn btn-primary otp_login" value="Login" /> 
+                </div>
+            </div>
+                
+          </div>
+      </div>
+  </div>
 <script type="text/javascript"><!--
+// Otp
+$( document ).ready(function() {
+    $('.btn_submit_continue').attr('disabled','disabled');
+});
+
+$('.get_otp').click(()=>{
+      var mobile_no=$('.mobile_number').val();
+      
+      if(mobile_no && mobile_no.length ===10){
+      
+      $.ajax({
+          type: "POST",
+          url: "index.php?route=account/login/otp_check_registeration",
+          dataType: 'json',
+          data:{mobile_no:mobile_no},
+          success: function(data){
+            console.log(data);
+            if(data['status']==='success'){
+              Swal.fire({
+                title: 'Already Register',
+                  text: "Mobile Number Already Registered",
+                  icon: 'warning',
+                  // showCancelButton: true,
+                  confirmButtonColor: '#3085d6',
+                  cancelButtonColor: '#d33',
+                  // confirmButtonText: 'Yes, delete it!'
+              });
+                   
+            }
+            else
+            {
+                $('#modalLoginOtp').modal('show'); 
+                $('.otp_login').click(()=>{
+                  var iOtp=$('.user_otp').val();
+                  $.ajax({
+                    type: "POST",
+                    url: "index.php?route=account/login/otp_verification_registeration",
+                    dataType: 'json',
+                    data:{mobile_no:mobile_no,iOtp:iOtp},
+                    success: function(regdata){
+                        console.log(regdata);
+                        if(regdata['login_status']==='success'){
+                          Swal.fire({
+                                title: 'Register Verification',
+                                text: "Mobile Otp verification Succesfully",
+                                icon: 'success',
+                                // showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                // confirmButtonText: 'Yes, delete it!'
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    // location.reload();
+                                    $('#modalLoginOtp').modal('hide'); 
+                                    $('.btn_submit_continue').removeAttr('disabled');
+                                      // $.ajax({
+                                      //    type: "POST",
+                                      //     url: "index.php?route=account/login/delete_otp_mobile",
+                                      //     dataType: 'json',
+                                      // })
+                                }
+                            });
+                    }
+                    else{
+                          Swal.fire({
+                                title: 'Register Verification',
+                                text: "Mobile Otp verification Failed",
+                                icon: 'error',
+                                // showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                // confirmButtonText: 'Yes, delete it!'
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    location.reload();
+                                }
+                            });
+                    }
+                    }
+                });
+                });
+            }
+          }
+      });
+      }
+      else{
+          Swal.fire({
+                title: 'Invalid Number',
+                text: "Please enter number and  valid number",
+                icon: 'error',
+                // showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                // confirmButtonText: 'Yes, delete it!'
+            });
+      }
+
+});
+
+
 // Sort the custom fields
 $('#account .form-group[data-sort]').detach().each(function() {
 	if ($(this).attr('data-sort') >= 0 && $(this).attr('data-sort') <= $('#account .form-group').length) {
@@ -541,3 +667,6 @@ $('#collapse-payment-address select[name=\'country_id\']').on('change', function
 
 $('#collapse-payment-address select[name=\'country_id\']').trigger('change');
 //--></script> 
+<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.css" rel="stylesheet" type="text/css"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.js"></script>
