--- a/catalog/view/theme/default/template/account/forgotten.twig
+++ b/catalog/view/theme/default/template/account/forgotten.twig
@@ -19,20 +19,20 @@
     <div id="content" class="{{ class }}">{{ content_top }}
       <h1>{{ heading_title }}</h1>
       <p>{{ text_email }}</p>
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
+      <form action="" method="post" enctype="multipart/form-data" class="form-horizontal">
         <fieldset>
           <legend>{{ text_your_email }}</legend>
           <div class="form-group required">
             <label class="col-sm-2 control-label" for="input-email">{{ entry_email }}</label>
             <div class="col-sm-10">
-              <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
+              <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control email_mobile_reset" />
             </div>
           </div>
         </fieldset>
         <div class="buttons clearfix">
           <div class="pull-left"><a href="{{ back }}" class="btn btn-default">{{ button_back }}</a></div>
           <div class="pull-right">
-            <input type="submit" value="{{ button_continue }}" class="btn btn-primary" />
+            <input type="button" value="{{ button_continue }}" class="btn btn-primary Get_forget_password" />
           </div>
         </div>
       </form>
@@ -40,3 +40,210 @@
     {{ column_right }}</div>
 </div>
 {{ footer }}
+<div class="modal fade" id="modalLoginOtp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Forget Otp Verification</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="form-group">
+                    <label class="control-label" for="input-password">Otp</label>
+                    <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" />
+                </div>
+                <div class="form-group">
+                    <input type="button" class="btn btn-primary otp_login" value="Login" /> 
+                </div>
+            </div>
+                
+          </div>
+      </div>
+  </div>
+  <div class="modal fade" id="password_update" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Password Update</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="form-group">
+                    <label class="control-label" for="new_password1">New Password</label>
+                    <input type="password" name="new_password" value="" placeholder="" id="new_password1" class="form-control new_password" />
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="confirm_password1">Confirm Password</label>
+                    <input type="password" name="confirm_password" value="" placeholder="" id="confirm_password1" class="form-control confirm_password" />
+                </div>
+                <div class="form-group">
+                    <input type="button" class="btn btn-primary update_pass" value="Update Password" /> 
+                </div>
+            </div>
+                
+          </div>
+      </div>
+  </div>
+
+<script>
+$('.Get_forget_password').click(function(){
+    var reset_email_mobile = $('.email_mobile_reset').val();
+    if(isEmail(reset_email_mobile)=== true){
+      alert('email address ');
+    }
+    else{
+      if(reset_email_mobile.length  === 10)
+      {
+          $.ajax({
+          type: "POST",
+          url: "index.php?route=account/forgotten/Check_valid_mobile",
+          dataType: 'json',
+          data:{reset_email_mobile:reset_email_mobile},
+          success: function(data){
+            console.log(data);
+            if(data['status']==='success'){
+                  $('#modalLoginOtp').modal('show'); 
+                  $('.otp_login').click(()=>{
+                  var iOtp=$('.user_otp').val();
+                  $.ajax({
+                    type: "POST",
+                    url: "index.php?route=account/forgotten/otp_verification_forget",
+                    dataType: 'json',
+                    data:{reset_email_mobile:reset_email_mobile,iOtp:iOtp},
+                    success: function(regdata){
+                        console.log(regdata);
+                        if(regdata['login_status']==='success'){
+                          Swal.fire({
+                                title: 'Forget Password Verification',
+                                text: "Forget Mobile Otp verification Succesfully",
+                                icon: 'success',
+                                // showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                // confirmButtonText: 'Yes, delete it!'
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    // location.reload();
+                                    $('#modalLoginOtp').modal('hide'); 
+                                    $('#password_update').modal('show');
+
+
+                                    
+                                    $('.update_pass').click(()=>{
+                                        var new_password=$('.new_password').val();
+                                        var confirm_password=$('.confirm_password').val();
+                                        if(new_password && confirm_password){
+                                          $.ajax({
+                                          type: "POST",
+                                          url: "index.php?route=account/forgotten/update_custome_password",
+                                          dataType: 'json',
+                                          data:{reset_email_mobile:reset_email_mobile,new_password:new_password,confirm_password:confirm_password},
+                                          success: function(update_pass){
+                                              if(update_pass['login_status']==='success'){
+                                                    Swal.fire({
+                                                    title: 'Password update',
+                                                    text: "Password updated successfully",
+                                                    icon: 'success',
+                                                    // showCancelButton: true,
+                                                    confirmButtonColor: '#3085d6',
+                                                    cancelButtonColor: '#d33',
+                                                    // confirmButtonText: 'Yes, delete it!'
+                                                }).then((result) => {
+                                                    if (result.isConfirmed) {
+                                                        location.reload();
+                                                    }
+                                                });
+                                              }
+                                              else{
+                                                   Swal.fire({
+                                                    title: 'Password update',
+                                                    text: "Password updated Failed",
+                                                    icon: 'error',
+                                                    // showCancelButton: true,
+                                                    confirmButtonColor: '#3085d6',
+                                                    cancelButtonColor: '#d33',
+                                                    // confirmButtonText: 'Yes, delete it!'
+                                                });
+                                              }
+                                           }
+                                          })
+                                        }
+                                        else
+                                        {
+                                          Swal.fire({
+                                                    title: 'Password Not Match',
+                                                    text: "New Password and confirm Password Not Match",
+                                                    icon: 'error',
+                                                    // showCancelButton: true,
+                                                    confirmButtonColor: '#3085d6',
+                                                    cancelButtonColor: '#d33',
+                                                    // confirmButtonText: 'Yes, delete it!'
+                                                });
+                                        }
+                                    });
+                                     
+                                }
+                            });
+                    }
+                    else{
+                          Swal.fire({
+                                title: 'Forget Password Verification',
+                                text: "Forget Mobile Otp verification Failed",
+                                icon: 'error',
+                                // showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                // confirmButtonText: 'Yes, delete it!'
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    location.reload();
+                                }
+                            });
+                    }
+                    }
+                });
+                });
+            }
+            else{
+                  Swal.fire({
+                  title: 'Invalid Number',
+                  text: "Mobile Number Not Found",
+                  icon: 'warning',
+                  // showCancelButton: true,
+                  confirmButtonColor: '#3085d6',
+                  cancelButtonColor: '#d33',
+                  // confirmButtonText: 'Yes, delete it!'
+              });
+            }
+          }
+          });
+      }
+      else
+      {
+        Swal.fire({
+                  title: 'Invalid Number',
+                  text: "Incorrect Number please check it",
+                  icon: 'warning',
+                  // showCancelButton: true,
+                  confirmButtonColor: '#3085d6',
+                  cancelButtonColor: '#d33',
+                  // confirmButtonText: 'Yes, delete it!'
+              });
+      }
+    }
+});
+function isEmail(email) {
+  var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+  return regex.test(email);
+}
+
+</script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.css" rel="stylesheet" type="text/css"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.1.10/sweetalert2.js"></script>
