--- a/catalog/view/theme/Demo-Store/template/common/home.twig
+++ b/catalog/view/theme/Demo-Store/template/common/home.twig
@@ -25,20 +25,20 @@
                                 </button>
                             </div>
                             <form action="{{ action }}" method="post" enctype="multipart/form-data">
-                            <div class="modal-body mx-3">
-                                <div class="form-group">
-                                    <label class="control-label" for="input-email">Mobile No</label>
-                                    <input type="text" name="email" value="" placeholder="" id="input-email" class="form-control user_account_mobile" />
+                                <div class="modal-body mx-3">
+                                    <div class="form-group">
+                                        <label class="control-label" for="input-email">Mobile No</label>
+                                        <input type="text" name="email" value="" placeholder="" id="input-email" class="form-control user_account_mobile" />
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="button" class="btn btn-primary get_otp send-otp" value="Send OTP" /> 
+                                        <input type="button" class="btn btn-primary skip_form_login" value="Skip Login" data-dismiss="modal" aria-label="Close" /> 
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="checkbox" id="skip_form" class="" value="Active"/>
+                                        <label for="skip_form"> Don't show this again</label>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <input type="button" class="btn btn-primary get_otp send-otp" value="Send OTP" /> 
-                                    <input type="button" class="btn btn-primary skip_form_login" value="Skip Login" data-dismiss="modal" aria-label="Close" /> 
-                                </div>
-                                <div class="form-group">
-                                    <input type="checkbox" id="skip_form" class="" value="Active"/>
-                                    <label for="skip_form"> Not Show Again Login Form</label>
-                                </div>
-                            </div>
                             </form>
                         </div>
                     </div>
@@ -54,24 +54,21 @@
                             </div>
 
                             <form action="{{ action }}" method="post" enctype="multipart/form-data">
-                            <div class="modal-body mx-3">
-                                <div class="form-group">
-                                <label class="form-group number_change_label" for=""></label>
-                                <input type="button" class="btn btn-primary change_number" value="Change"/>
+                                <div class="modal-body mx-3">
+                                    <div class="form-group">
+                                    <label class="form-group number_change_label" for=""></label>
+                                    <input type="button" class="change_number" title="Change Mobile Number" value="Change"/>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="control-label" for="input-password">Enter OTP</label>
+                                        <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" autocomplete="off" />
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="button" class="btn btn-primary resend_otp" value="Resend OTP" /> 
+                                        <input type="button" class="btn btn-primary otp_login" value="Verify OTP" /> 
+                                    </div>
+                                    
                                 </div>
-                                <div class="form-group">
-                                    <label class="control-label" for="input-password">Enter OTP</label>
-                                    <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" />
-                                </div>
-                                <div class="form-group">
-                                    <input type="button" class="btn btn-primary resend_otp" value="Resend OTP" /> 
-                                    <input type="button" class="btn btn-primary otp_login" value="Verify OTP" /> 
-                                </div>
-                                
-                            </div>
-
-                                
-                            </div>
                             </form>
                         </div>
                     </div>
@@ -125,7 +122,7 @@ $(document).ready(function(){
                         if(data['status']==='success'){
                              $('#modalLoginForm').modal('hide');
                              $('#modalLoginOtp').modal('show');
-                             $('.number_change_label').text('Please enter the OTP sent to '+mobile_no);
+                             $('.number_change_label').text('Please enter the OTP sent to '+mobile_no+'.');
                              $('.change_number').on('click', function(){
                                 $('#modalLoginOtp').modal('hide');
                                 $('#modalLoginForm').modal('show');
