--- a/catalog/view/theme/default/template/checkout/login.twig
+++ b/catalog/view/theme/default/template/checkout/login.twig
@@ -27,13 +27,13 @@
     <h2>{{ text_returning_customer }}</h2>
     <p>{{ text_i_am_returning_customer }}</p>
     <div class="form-group">
-      <label class="control-label" for="input-email">{{ entry_email }}</label>
-      <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
+      <label class="control-label" for="input-email">Enter Email/Mobile Number</label>
+      <input type="text" name="email" value="" placeholder="Email/Mobile Number" id="input-email" class="form-control" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-0">
       <label class="control-label" for="input-password">{{ entry_password }}</label>
       <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
-      <a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
+      <div class="text-right"><a href="{{ forgotten }}" class="ul-link">{{ text_forgotten }}</a></div></div>
     <input type="button" value="{{ button_login }}" id="button-login" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
   </div>
 </div>
