--- a/catalog/view/theme/default/template/checkout/register.twig
+++ b/catalog/view/theme/default/template/checkout/register.twig
@@ -31,13 +31,11 @@
         <label class="control-label" for="input-payment-email">{{ entry_email }}</label>
         <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-payment-email" class="form-control" />
       </div>
-      <div class="form-group required">
+      <div class="form-group required otp-grp">
         <label class="control-label" for="input-payment-telephone">{{ entry_telephone }}</label>
-        <input type="text" name="telephone" value="" placeholder="{{ entry_telephone }}" id="input-payment-telephone" class="form-control mobile_number" />
+        <input type="text" name="telephone" value="" placeholder="{{ entry_telephone }}" id="input-payment-telephone" class="form-control mobile_number otp-tele" />
+        <input type="button" class="btn btn-primary get_otp" value="Get Otp" /> 
       </div>
-      <div class="form-group">
-              <input type="button" class="btn btn-primary get_otp" value="Get Otp" /> 
-          </div>
       {% for custom_field in custom_fields %}
       
       {% if custom_field.location == 'account' %}
@@ -366,11 +364,11 @@
   </div>
 </div>
 {% endif %} 
-<div class="modal fade" id="modalLoginOtp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade loginotp" id="modalLoginOtp" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header text-center">
-                <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+                <h4 class="modal-title w-100 font-weight-bold">Verify OTP</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
 
@@ -378,11 +376,12 @@
             </div>
             <div class="modal-body mx-3">
                 <div class="form-group">
-                    <label class="control-label" for="input-password">Otp</label>
-                    <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" />
+                    <label class="control-label" for="input-password">Enter OTP</label>
+                    <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" autocomplete="off" />
                 </div>
                 <div class="form-group">
-                    <input type="button" class="btn btn-primary otp_login" value="Login" /> 
+                    <input type="button" class="btn btn-primary resend_otp" value="Resend OTP" /> 
+                    <input type="button" class="btn btn-primary otp_login" value="Verify OTP" /> 
                 </div>
             </div>
                 
