--- a/catalog/view/theme/Demo-Store/template/common/home.twig
+++ b/catalog/view/theme/Demo-Store/template/common/home.twig
@@ -67,7 +67,9 @@
                                         <input type="button" class="btn btn-primary resend_otp" value="Resend OTP" /> 
                                         <input type="button" class="btn btn-primary otp_login" value="Verify OTP" /> 
                                     </div>
-                                    
+                                    <div class="form-group">
+                                        <p>Resend OTP Will Cooldown in <span id="time">60</span> Seconds </p>
+                                    </div>
                                 </div>
                             </form>
                         </div>
@@ -92,6 +94,7 @@ $(document).ready(function(){
         }
         else{
                     $('#modalLoginForm').modal('show');
+
         }
         
     });
@@ -127,6 +130,19 @@ $(document).ready(function(){
                                 $('#modalLoginOtp').modal('hide');
                                 $('#modalLoginForm').modal('show');
                              });
+                             $('.resend_otp').attr('disabled','disabled');
+                                var i = 59;
+                                var time = $("#time")
+                                var timer = setInterval(function() {
+                                time.html(i);
+                                if (i == 0) {
+                                    $('.resend_otp').removeAttr('disabled');
+                                    clearInterval(timer);
+
+                                }
+                                i--;
+                                }, 1000)
+                             
                             $('.otp_login').click(()=>{
                                  var user_otp=$('.user_otp').val();
                                 $.ajax({
