--- a/catalog/view/theme/Demo-Store/template/common/home.twig
+++ b/catalog/view/theme/Demo-Store/template/common/home.twig
@@ -68,7 +68,7 @@
                                         <input type="button" class="btn btn-primary otp_login" value="Verify OTP" /> 
                                     </div>
                                     <div class="form-group">
-                                        <p>Resend OTP Will Cooldown in <span id="time">60</span> Seconds </p>
+                                        <p>Please wait <span id="time">60</span> sec before requesting a new OTP.</p>
                                     </div>
                                 </div>
                             </form>
@@ -87,6 +87,9 @@
 
 <script type="text/javascript">
 var skip_form ='';
+var time = $("#time");
+var timer;
+
 $(document).ready(function(){
     $(window).on('load', function() {
         if(localStorage.getItem('skip_login_checkbox')==='Active'){
@@ -129,11 +132,12 @@ $(document).ready(function(){
                              $('.change_number').on('click', function(){
                                 $('#modalLoginOtp').modal('hide');
                                 $('#modalLoginForm').modal('show');
+                                clearInterval(timer);
                              });
                              $('.resend_otp').attr('disabled','disabled');
+                               
                                 var i = 59;
-                                var time = $("#time")
-                                var timer = setInterval(function() {
+                                timer = setInterval(function() {
                                 time.html(i);
                                 if (i == 0) {
                                     $('.resend_otp').removeAttr('disabled');
