--- a/catalog/view/theme/default/template/checkout/register.twig
+++ b/catalog/view/theme/default/template/checkout/register.twig
@@ -384,7 +384,7 @@
                     <input type="button" class="btn btn-primary otp_login" value="Verify OTP" /> 
                 </div>
                 <div class="form-group">
-                    <p>Resend OTP Will Cooldown in <span id="time">60</span> Seconds </p>
+                    <p>Please wait <span id="time">60</span> sec before requesting a new OTP.</p>
                 </div>
             </div>
                 
