--- a/catalog/view/theme/Demo-Store/template/product/search.twig
+++ b/catalog/view/theme/Demo-Store/template/product/search.twig
@@ -150,6 +150,28 @@
                    </div>
                {% endif %}
              <p class="description">{{ product.description }}</p>
+             {% if product.attribute_groups %}
+            <div class="tab-pane" id="tab-specification">
+              <table class="table table-bordered">
+                {% for attribute_group in product.attribute_groups %}
+                <thead>
+                  <tr>
+                    <td colspan="2"><strong>{{ attribute_group.name }}</strong></td>
+                  </tr>
+                </thead>
+                <tbody>
+                {% for attribute in attribute_group.attribute %}
+                <tr>
+                  <td>{{ attribute.name }}</td>
+                  <td>{{ attribute.text }}</td>
+                </tr>
+                {% endfor %}
+                  </tbody>
+                {% endfor %}
+              </table>
+            </div>
+            {% endif %}
+             
        {% if product.price %}
               <p class="price">
                 {% if not product.special %}
