--- a/catalog/view/theme/default/template/account/register.twig
+++ b/catalog/view/theme/default/template/account/register.twig
@@ -67,7 +67,7 @@
           <div class="form-group required otp-grp">
             <label class="col-sm-2 control-label" for="input-telephone">{{ entry_telephone }}</label>
             <div class="col-sm-10">
-              <input type="tel" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control mobile_number otp-tele" />
+              <input type="tel" name="telephone" value="{{ telephone }}" placeholder="{{ entry_telephone }}" id="input-telephone" class="form-control mobile_number otp-tele" /><label class="Otp_verification_label d-none" for="">Verified</label>
               <input type="button" class="btn btn-primary get_otp" value="Get Otp" />
               {% if error_telephone %}
               <div class="text-danger">{{ error_telephone }}</div>
@@ -313,8 +313,8 @@
             </div>
             <div class="modal-body mx-3">
                 <div class="form-group">
-                    <label class="control-label" for="input-password">OTP</label>
-                    <input type="password" name="password" value="" placeholder="" id="input-password" class="form-control user_otp" autocomplete="off" />
+                    <label class="control-label" for="input-password1">OTP</label>
+                    <input type="password" value="" placeholder="" id="input-password1" class="form-control user_otp" autocomplete="off" />
                 </div>
                 <div class="form-group">
                     <input type="button" class="btn btn-primary resend_otp" value="Resend OTP" /> 
@@ -408,6 +408,7 @@ $('.get_otp,.resend_otp').click(()=>{
                                       //     url: "index.php?route=account/login/delete_otp_mobile",
                                       //     dataType: 'json',
                                       // })
+                                      $('.Otp_verification_label').removeClass("d-none");
                                 }
                             });
                     }
